src/index.css
:root {
	/* light mode colors */
	--lm-dark-green: #11310d;
	--lm-med-green: #3f5b37;
	--lm-light-green: #eef1d8;
	--lm-dark-brown: #c9ab9b;
	--lm-med-brown: #f2e4ce;
	--lm-light-brown: #fefae0;

	/* dark mode colors */
	--dm-dark-green: #11310d;
	--dm-med-green: #3f5b37;
	--dm-light-green: #eef1d8;
	--dm-dark-brown: #c9ab9b;
	--dm-med-brown: #f2e4ce;
	--dm-light-brown: #fefae0;

	--color-bg: var(--lm-med-brown);
	--color-text: var(--lm-dark-green);
	--color-accent-primary: var(--lm-dark-brown);
	--color-accent-primary-alt: var(--lm-light-brown);
	--color-accent-secondary: var(--lm-med-green);
	--color-accent-secondary-alt: var(--lm-light-green);
}

@media screen and (prefers-color-scheme: light) {
	:root {
		--color-bg: var(--lm-med-brown);
		--color-text: var(--lm-dark-green);
		--color-accent-primary: var(--lm-dark-brown);
		--color-accent-primary-alt: var(--lm-light-brown);
		--color-accent-secondary: var(--lm-med-green);
		--color-accent-secondary-alt: var(--lm-light-green);
	}
}

:root.theme-light {
	--color-bg: var(--lm-med-brown);
	--color-text: var(--lm-dark-green);
	--color-accent-primary: var(--lm-dark-brown);
	--color-accent-primary-alt: var(--lm-light-brown);
	--color-accent-secondary: var(--lm-med-green);
	--color-accent-secondary-alt: var(--lm-light-green);
}

*,
*::after,
*::before {
	box-sizing: border-box;
}

/**
 * Make sure the app fills the height of the viewport
 */
html,
body,
#root,
#root > * {
	min-height: 100vh;
}

html {
	font-size: 62.5%;
}

body {
	background-color: var(--color-bg);
	color: var(--color-text);
	font-family: Poppins, arial, sans-serif;
	font-size: 1.6rem;
	line-height: 1.4;
	margin: 0;

	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
}

ul {
	padding: 0;
}
button {
	background-color: var(--color-accent-secondary);
	color: var(--color-accent-primary-alt);
	padding: 0.8rem 1.5rem;
	border: 2px solid transparent;
	border-radius: 7px;
	font-size: 1.5rem;
	letter-spacing: 0.1rem;
	text-transform: uppercase;
	outline: none;
}
button:hover,
button:active {
	background-color: var(--color-text);
	cursor: pointer;
}

button:focus-visible {
	background-color: var(--lm-light-green);
	color: var(--color-text);
	border: 2px solid var(--color-text);
	font-weight: bold;
}

input[type='text'] {
	border: 2px solid var(--color-accent-primary);
	border-radius: 7px;
	outline: none;
	font-size: 1.6rem;
	padding: 0.5rem 0.8rem;
	background-color: var(--color-accent-primary-alt);
	color: var(--color-text);
}

input[type='text']:focus,
input[type='text']:active {
	border: 2px solid var(--color-text);
	background-color: var(--lm-light-green);
}

